Fix overflowing grid background

--- a/src/_includes/css/base.css
+++ b/src/_includes/css/base.css
@@ -45,25 +45,29 @@ body {
   background-color: var(--colour-blue);
 
   color-scheme: light dark;
-  position: relative;
 }
 
-body::before {
-  content: '';
-  display: block;
-  width: 100%;
-  height: 100%;
+.grid-bg {
   position: absolute;
-  background: var(--colour-blue) repeat url("/images/grid-tile.jpg");
+  width: 100%;
+  height: 100vh;
   top: 0;
   left: 0;
-  transform: rotate(-7deg);
+  overflow: hidden;
+  z-index: -1;
 }
 
-@media (prefers-color-scheme: light) {
-  body {
-    background-color: #fff;
-  }
+.grid-bg::after {
+  content: '';
+  display: block;
+  width: 110%;
+  height: 110%;
+  position: absolute;
+  background: repeat url("/images/grid-tile.jpg");
+  transform: rotate(-7deg);
+  top: -5%;
+  left: -5%;
+  z-index: -1;
 }
 
 /* ============== Typography ============== */
